--- a/Back-End/SiteKaue/pom.xml
+++ b/Back-End/SiteKaue/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>SiteKaue</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SiteKaue</name>
-	<description>Meu projeto do Curso Técnico de Informática para Web, (Site planejado para conteúdo de jogos de luta)</description>
+	<description>Back-End de um site com conteúdo sobre jogos de luta</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -20,6 +20,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.14</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
